// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Textarea Auto Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 gVXXFm sc-dkQUaI bpnUZP sc-WZYut hgLotE"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 gVXXFm sc-dkQUaI bpnUZP sc-WZYut hgLotE"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 fzNfvM sc-dkQUaI dlbUWk sc-WZYut hgLotE"
      disabled=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Min Max Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 gVXXFm sc-dkQUaI bpnUZP sc-WZYut hgLotE"
      rows="4"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 gVXXFm sc-dkQUaI dyvnqC sc-WZYut hgLotE"
      placeholder="Type something..."
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Read Only 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 gVXXFm sc-dkQUaI bpnUZP sc-WZYut hgLotE"
      readonly=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 gVXXFm sc-dkQUaI bpnUZP sc-WZYut hgLotE"
      placeholder="Type something..."
    />
  </div>
</div>
`;
